WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183068
Caches::m_storage should be set to null in case of error at initialization time
https://bugs.webkit.org/show_bug.cgi?id=183068
Summary
Caches::m_storage should be set to null in case of error at initialization time
youenn fablet
Reported
2018-02-22 16:39:16 PST
Not doing so will make next initialize requests be appended to the queue and never called.
Attachments
Patch
(2.36 KB, patch)
2018-02-22 16:47 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-02-22 16:47:49 PST
Created
attachment 334484
[details]
Patch
youenn fablet
Comment 2
2018-02-22 16:48:11 PST
This complements
https://bugs.webkit.org/show_bug.cgi?id=183062
. Tested locally by hammering the WPT service worker tests, I no longer see Cache Storage related time outs.
youenn fablet
Comment 3
2018-02-22 16:49:05 PST
<
rdar://problem/37803485
>
WebKit Commit Bot
Comment 4
2018-02-26 16:04:11 PST
Comment on
attachment 334484
[details]
Patch Clearing flags on attachment: 334484 Committed
r229045
: <
https://trac.webkit.org/changeset/229045
>
WebKit Commit Bot
Comment 5
2018-02-26 16:04:12 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug